# routes/index.js
@@ -1,0 +1,12 @@
+const router = require("express").Router();
+
+router.use('/', require('./swagger'));
+
+router.get("/", (req, res) => {
+  //#swagger.tags=['Hello World']
+  res.send("Hello World");
+});
+
+router.use('/movies', require('./movies'));
+
+module.exports = router;
